Add Team F video and update existing entries

--- a/index.html
+++ b/index.html
@@ -1284,42 +1284,43 @@ input[type="range"]#rate_personality::-moz-range-thumb{
     }
 
   const stage3EvalByTeam = {
-      'Team A': 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
-      , 'Team B': 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
-    , 'Team C': 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
-    ,
-      'Team D': 'https://www.youtube.com/watch?v=s5-RRUEX0lI',
-      'Team E': 'https://www.youtube.com/watch?v=NbT_KcIa5Cw'
-    }
+  'Team A': 'https://www.youtube.com/watch?v=hXsY0U9zZuA',
+  'Team B': 'https://www.youtube.com/watch?v=_iOy0mMzyyc',
+  'Team C': 'https://www.youtube.com/watch?v=X_iZ0_x_QFg',
+  'Team D': 'https://www.youtube.com/watch?v=s5-RRUEX0lI',
+  'Team E': 'https://www.youtube.com/watch?v=NbT_KcIa5Cw',
+  'Team F': 'https://www.youtube.com/watch?v=cJf6KaF6dXo'
+}
   // === Central map of per-evaluation team videos (for list view) ===
   // Keys must match the eval label produced by the menu code (e.g. "Evaluation 3")
   const TEAM_VIDEOS = {
   'Evaluation 3': {
-    'Team A': {
+            'Team A': {
       title: 'Re:Start!!!!! - Snow Halation',
       url: 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
     },
-    'Team B': {
+'Team B': {
       title: '絶対アイドル辞めないで / キューティー♡パピヨン Cover',
       url: 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
     },
     'Team C': {
       title: '最上級にかわいいの！/ 超♡にこにこ宣伝部 Cover',
       url: 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
-    }
-    ,
+    },
     'Team D': {
       title: '♡♡♡わんだーらんど / pink rabbit♡ Cover',
       url: 'https://www.youtube.com/watch?v=s5-RRUEX0lI'
-    }
-      ,
+    },
     'Team E': {
       title: '仮契約のシンデレラ / 契約済のシンデレラ Cover',
       url: 'https://www.youtube.com/watch?v=NbT_KcIa5Cw'
+    },
+    'Team F': {
+      title: '明日の私に幸あれ / ふうりん♡かざん Cover',
+      url: 'https://www.youtube.com/watch?v=cJf6KaF6dXo'
     }
+
 }
-  // Future example:
-  // 'Evaluation 4': { 'Team X': { title: '...', url: '...' } }
 };
 
   const campEvalByTeam = {
